# Distributed-systems

book/guessing_game/src/: main.rs
lab/dsassignment1/public-tests/: test-loop.sh
lab/dsassignment1/public-tests/tests/: modules.rs
lab/dsassignment1/solution/: lib.rs
lab/dsassignment2/public-tests/tests/: system.rs
lab/dsassignment2/solution/src/: lib.rs
lab/dsassignment2/solution/src/atomic_register/: distributed_register.rs  mod.rs
lab/dsassignment2/solution/src/registers_manager/: mod.rs  register_handler.rs
lab/dsassignment2/solution/src/sectors_manager/: mod.rs  sectors_manager.rs
lab/dsassignment2/solution/src/serialization/: deserialize.rs  hmac.rs  message.rs  mod.rs  serialize.rs
lab/dsassignment2/solution/src/stubborn_register_client/: mod.rs  stubborn_link.rs  timer.rs
lab/dsassignment2/solution/src/transfer/: ack_handler.rs  mod.rs  response_serializer.rs
lab/dsassignment2/test-utils/: system.rs
lab/dsassignment3/solution/src/: domain.rs  lib.rs  persistent_state.rs  volatile_state.rs
lab/dslab01/: solution.rs
lab/dslab01/examples/: rust_overview.rs
lab/dslab02/: drop  main.rs  solution.rs
lab/dslab03/: Cargo.toml  main.rs  solution.rs
lab/dslab03/examples/: crossbeam.rs  tennis.rs
lab/dslab04/: Cargo.toml
lab/dslab04/examples/: futures.rs  tokio.rs
lab/dslab05/: Cargo.toml  solution.rs
lab/dslab05/examples/: rsa.rs
lab/dslab05/examples/rustls/: main.rs
lab/dslab05/examples/tcp-communication/: client.rs  main.rs
lab/dslab05/examples/udp-communication/: main.rs
lab/dslab06/: Cargo.toml  main.rs  solution.rs
lab/dslab07/: Cargo.toml
lab/dslab08/: Cargo.toml  main.rs  public_test.rs  solution.rs
lab/dslab09/: Cargo.toml  main.rs  public_test.rs  solution.rs
lab/dslab10/: Cargo.toml  main.rs  public_test.rs  solution.rs
lab/dslab12/: Cargo.toml  main.rs  public_test.rs  solution.rs
lab/dslab13/: Cargo.toml  main.rs  public_test.rs  solution.rs
lab/dslab14/: Cargo.toml  main.rs  public_test.rs  solution.rs
