[package]
name = "lab-12"
version = "0.2.1"
authors = ["Mateusz Banaszek <m.banaszek@mimuw.edu.pl"]
edition = "2021"

[dependencies]
uuid = { version = "1.11", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
tokio = { version = "1.42", features = ["full"] }
module_system = { path = "../dsassignment1/solution/", package = "assignment-1-solution" }

[dev-dependencies]
ntest = "0.9"

[[bin]]
name = "lab10"
path = "main.rs"

[lints.rust]
unsafe_code = "forbid"
